--- a/A05 - SAT/A05 - SAT.vcxproj
+++ b/A05 - SAT/A05 - SAT.vcxproj
@@ -107,6 +107,9 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClCompile Include="AppClassMain.cpp" />
     <ClCompile Include="ControllerConfiguration.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MyEntity.cpp" />
+    <ClCompile Include="MyEntityManager.cpp" />
+    <ClCompile Include="MyOctant.cpp" />
     <ClCompile Include="MyRigidBody.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +122,10 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClInclude Include="ControllerConfiguration.h" />
     <ClInclude Include="Definitions.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="MyEntity.h" />
+    <ClInclude Include="MyEntityManager.h" />
+    <ClInclude Include="MyOctant.h" />
+    <ClInclude Include="MyOctantExample.h" />
     <ClInclude Include="MyRigidBody.h" />
   </ItemGroup>
   <ItemGroup>
